Guest changed to Away

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button id="threepoints" class="addpoints" onclick="addthreeH()">+3</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <p id="guest-score">0</p>
                 <button id="onepoint" class="addpoints" onclick="addoneG()">+1</button>
                 <button id="twopoints" class="addpoints" onclick="addtwoG()">+2</button>
